--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,17 @@
 // Variables
-$harvey-black: #131111;
-$harvey-white: #e0e0e0;
-$harvey-red: #ff2323;
-$harvey-green: #005f20;
-$harvey-blue: #070bce;
+$color-white: #ffffff;
+$color-grey-1: #F8F8F8;
+$color-grey-2: #E8E8E8;
+$color-grey-3: #D8D8D8;
+$color-grey-4: #C8C8C8;
+$color-grey-5: #ADADAD;
+$color-grey-6: #7D7D7D;
+$color-grey-7: #595959;
+$color-grey-8: #35383A;
+$color-black: #191C1F;
+$color-blue: #F0F1F4;
+$color-pink: #FF0099;
+$color-pink-light: #F3DCE6;
+$color-yellow: #ECB904;
+$color-yellow: #F58720;
+$color-green: #008300;
